HasCASL/test/ListEx.hascasl
var b : Type
var a :Type+
type List a : Type
free type List a ::= Nil | Cons(head : a; tail : List a)
free type List a ::= Nil | Cons(head : a; tail : List b)
free type List a ::= Nil | Cons(head : a; tail : List a b)
